--- a/toolchain/metapackages/Makefile
+++ b/toolchain/metapackages/Makefile
@@ -1,6 +1,6 @@
 # Makefile for building metapackages for all MuntsOS cross-toolchains
 
-# Copyright (C)2018-2024, Philip Munts dba Munts Technologies.
+# Copyright (C)2018-2025, Philip Munts dba Munts Technologies.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -21,7 +21,7 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 MUNTSOS		?= ../..
-BOARDNAME	?= BeagleBone
+BOARDNAME	?= AArch64
 
 include $(MUNTSOS)/include/$(BOARDNAME).mk
 
@@ -31,13 +31,11 @@ else ifeq ($(TOOLCHAIN_BUILDER), arm-gnu)
 FLAVOR		:= abe
 endif
 
-BOARDNAMES	:= BeagleBone RaspberryPi1 RaspberryPi2 RaspberryPi3
+BOARDNAMES	:= AArch64 RISCV64
 BOARDNAMELC	:= $(shell echo $(BOARDNAME) | tr A-Z a-z)
 
-PKGVERSION1	:= 9.3
-PKGVERSION2	:= 9.3
-PKGVERSION3	:= 9.3
-PKGVERSION4	:= 9.3
+PKGVERSION1	:= 9.4
+PKGVERSION2	:= 9.4
 
 default:
 	$(MAKE) allplatforms
@@ -56,24 +54,6 @@ allplatforms:
 # Build a metapackage for a single platform
 
 oneplatform:
-ifeq ($(BOARDNAME), RaspberryPi1)
-	cp control.template4					control.$(BOARDNAME)
-	sed -i 's/@@BOARDNAME@@/$(BOARDNAME)/g'			control.$(BOARDNAME)
-	sed -i 's/@@BOARDNAMELC@@/$(BOARDNAMELC)/g'		control.$(BOARDNAME)
-	sed -i 's/@@CONFIGURE_NAME@@/$(CONFIGURE_NAME)/g'	control.$(BOARDNAME)
-	sed -i 's/@@VERSION@@/$(PKGVERSION4)/g'			control.$(BOARDNAME)
-	equivs-build						control.$(BOARDNAME)
-	rm							control.$(BOARDNAME)
-	mv muntsos-dev-$(BOARDNAMELC)_$(PKGVERSION4)_all.deb muntsos-dev-$(BOARDNAMELC)-$(PKGVERSION4)-all.deb
-else ifeq ($(BOARDNAME), RaspberryPi3)
-	cp control.template3					control.aarch64
-	sed -i 's/@@CONFIGURE_NAME@@/$(CONFIGURE_NAME)/g'	control.aarch64
-	sed -i 's/@@FLAVOR@@/$(FLAVOR)/g'			control.aarch64
-	sed -i 's/@@VERSION@@/$(PKGVERSION3)/g'			control.aarch64
-	equivs-build						control.aarch64
-	rm							control.aarch64
-	mv muntsos-dev-aarch64_$(PKGVERSION3)_all.deb muntsos-dev-aarch64-$(PKGVERSION3)-all.deb
-else
 	cp control.template2					control.$(BOARDNAME)
 	sed -i 's/@@BOARDNAME@@/$(BOARDNAME)/g'			control.$(BOARDNAME)
 	sed -i 's/@@BOARDNAMELC@@/$(BOARDNAMELC)/g'		control.$(BOARDNAME)
@@ -83,7 +63,6 @@ else
 	equivs-build						control.$(BOARDNAME)
 	rm							control.$(BOARDNAME)
 	mv muntsos-dev-$(BOARDNAMELC)_$(PKGVERSION2)_all.deb muntsos-dev-$(BOARDNAMELC)-$(PKGVERSION2)-all.deb
-endif
 	-rm *.buildinfo *.changes
 
 # Remove working files
