--- a/extensions/lpc1114/Makefile
+++ b/extensions/lpc1114/Makefile
@@ -155,7 +155,7 @@ $(PKGDIR): $(COMPONENTS)
 	install -cm 0755 $(RASPBERRYPI_LPC1114_SRC)/utils/lpc21isp/lpc21isp			$@/usr/local/bin
 	install -cm 0755 $(RASPBERRYPI_LPC1114_SRC)/spi-agent-lib/clients/c/spi_agent_test	$@/usr/local/bin
 ifneq ($(findstring BeagleBone,$(BOARDNAME)),)
-	install -cm 0644 expansion_lpc1114.config.BeagleBone					$@/usr/local/etc/expansion_lpc1114.config
+	install -cm 0644 expansion_lpc1114.config.BeagleBoneGreen				$@/usr/local/etc/expansion_lpc1114.config
 endif
 ifneq ($(findstring RaspberryPi,$(BOARDNAME)),)
 	install -cm 0644 expansion_lpc1114.config.RaspberryPi					$@/usr/local/etc/expansion_lpc1114.config
