--- a/bootkernel/kernel/BeaglePlay.config
+++ b/bootkernel/kernel/BeaglePlay.config
@@ -3664,7 +3664,7 @@ CONFIG_PWM_SYSFS=y
 # CONFIG_PWM_ATMEL_TCB is not set
 # CONFIG_PWM_CLK is not set
 # CONFIG_PWM_FSL_FTM is not set
-CONFIG_PWM_OMAP_DMTIMER=y
+# CONFIG_PWM_OMAP_DMTIMER is not set
 CONFIG_PWM_PCA9685=y
 CONFIG_PWM_TIECAP=y
 CONFIG_PWM_TIEHRPWM=y
