--- a/bootkernel/kernel/BeaglePlay.config
+++ b/bootkernel/kernel/BeaglePlay.config
@@ -1160,11 +1160,8 @@ CONFIG_PREVENT_FIRMWARE_BUILD=y
 # Firmware loader
 #
 CONFIG_FW_LOADER=y
-CONFIG_FW_LOADER_PAGED_BUF=y
-CONFIG_FW_LOADER_SYSFS=y
 CONFIG_EXTRA_FIRMWARE=""
-CONFIG_FW_LOADER_USER_HELPER=y
-# CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
+# CONFIG_FW_LOADER_USER_HELPER is not set
 # CONFIG_FW_LOADER_COMPRESS is not set
 # CONFIG_FW_UPLOAD is not set
 # end of Firmware loader
@@ -1438,8 +1435,7 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 # CONFIG_HMC6352 is not set
 # CONFIG_DS1682 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
-CONFIG_SRAM=y
-CONFIG_SRAM_DMA_HEAP=y
+# CONFIG_SRAM is not set
 # CONFIG_XILINX_SDFEC is not set
 # CONFIG_HISI_HIKEY_USB is not set
 # CONFIG_OPEN_DICE is not set
@@ -1593,7 +1589,7 @@ CONFIG_TI_DAVINCI_MDIO=y
 # CONFIG_TI_CPSW_PROXY_CLIENT is not set
 CONFIG_TI_K3_CPPI_DESC_POOL=y
 CONFIG_TI_K3_AM65_CPSW_NUSS=y
-CONFIG_TI_K3_AM65_CPTS=y
+# CONFIG_TI_K3_AM65_CPTS is not set
 # CONFIG_TI_ICSS_IEP is not set
 # CONFIG_NET_VENDOR_VERTEXCOM is not set
 # CONFIG_NET_VENDOR_VIA is not set
@@ -1609,7 +1605,7 @@ CONFIG_WIZNET_W5100_SPI=y
 CONFIG_PHYLINK=y
 CONFIG_PHYLIB=y
 CONFIG_SWPHY=y
-CONFIG_LED_TRIGGER_PHY=y
+# CONFIG_LED_TRIGGER_PHY is not set
 CONFIG_PHYLIB_LEDS=y
 CONFIG_FIXED_PHY=y
 # CONFIG_SFP is not set
@@ -1620,7 +1616,7 @@ CONFIG_FIXED_PHY=y
 # CONFIG_AMD_PHY is not set
 # CONFIG_ADIN_PHY is not set
 # CONFIG_ADIN1100_PHY is not set
-CONFIG_AQUANTIA_PHY=y
+# CONFIG_AQUANTIA_PHY is not set
 CONFIG_AX88796B_PHY=y
 # CONFIG_BROADCOM_PHY is not set
 # CONFIG_BCM54140_PHY is not set
@@ -1634,37 +1630,37 @@ CONFIG_AX88796B_PHY=y
 # CONFIG_LXT_PHY is not set
 # CONFIG_INTEL_XWAY_PHY is not set
 # CONFIG_LSI_ET1011C_PHY is not set
-CONFIG_MARVELL_PHY=y
-CONFIG_MARVELL_10G_PHY=m
+# CONFIG_MARVELL_PHY is not set
+# CONFIG_MARVELL_10G_PHY is not set
 # CONFIG_MARVELL_88Q2XXX_PHY is not set
 # CONFIG_MARVELL_88X2222_PHY is not set
 # CONFIG_MAXLINEAR_GPHY is not set
 # CONFIG_MEDIATEK_GE_PHY is not set
-CONFIG_MICREL_PHY=y
+# CONFIG_MICREL_PHY is not set
 # CONFIG_MICROCHIP_T1S_PHY is not set
-CONFIG_MICROCHIP_PHY=m
+CONFIG_MICROCHIP_PHY=y
 # CONFIG_MICROCHIP_T1_PHY is not set
-CONFIG_MICROSEMI_PHY=m
+# CONFIG_MICROSEMI_PHY is not set
 # CONFIG_MOTORCOMM_PHY is not set
 # CONFIG_NATIONAL_PHY is not set
 # CONFIG_NXP_CBTX_PHY is not set
 # CONFIG_NXP_C45_TJA11XX_PHY is not set
 # CONFIG_NCN26000_PHY is not set
-CONFIG_AT803X_PHY=y
+# CONFIG_AT803X_PHY is not set
 # CONFIG_QSEMI_PHY is not set
 CONFIG_REALTEK_PHY=y
 # CONFIG_RENESAS_PHY is not set
 # CONFIG_ROCKCHIP_PHY is not set
-CONFIG_SMSC_PHY=m
+# CONFIG_SMSC_PHY is not set
 # CONFIG_STE10XP is not set
 # CONFIG_TERANETICS_PHY is not set
 # CONFIG_DP83822_PHY is not set
 # CONFIG_DP83TC811_PHY is not set
-CONFIG_DP83848_PHY=y
-CONFIG_DP83867_PHY=y
-CONFIG_DP83869_PHY=y
+# CONFIG_DP83848_PHY is not set
+# CONFIG_DP83867_PHY is not set
+# CONFIG_DP83869_PHY is not set
 CONFIG_DP83TD510_PHY=y
-CONFIG_VITESSE_PHY=y
+# CONFIG_VITESSE_PHY is not set
 # CONFIG_XILINX_GMII2RGMII is not set
 # CONFIG_MICREL_KS8995MA is not set
 # CONFIG_PSE_CONTROLLER is not set
@@ -1790,15 +1786,12 @@ CONFIG_RTL8192C_COMMON=m
 # CONFIG_WLAN_VENDOR_SILABS is not set
 # CONFIG_WLAN_VENDOR_ST is not set
 CONFIG_WLAN_VENDOR_TI=y
-CONFIG_WL1251=m
-CONFIG_WL1251_SPI=m
-# CONFIG_WL1251_SDIO is not set
-CONFIG_WL12XX=m
+# CONFIG_WL1251 is not set
+# CONFIG_WL12XX is not set
 CONFIG_WL18XX=m
-CONFIG_CC33XX=m
-CONFIG_CC33XX_SDIO=m
+# CONFIG_CC33XX is not set
 CONFIG_WLCORE=m
-CONFIG_WLCORE_SPI=m
+# CONFIG_WLCORE_SPI is not set
 CONFIG_WLCORE_SDIO=m
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
